# AtomicHack-1st-place

./: .gitignore  Dockerfile  Makefile  README.md  VALIDATE.md  config.py  docker-compose.yaml  predict.py  pyproject.toml  run_backend.py  streamlit_app.py  submit.py
app/: main.py  utils.py
app/neuro/: __init__.py  main.py  utils.py
app/neuro/roboflow_net/: __init__.py  config.py  core.py
app/neuro/yolo_nas_net/: __init__.py  config.py  core.py
app/neuro/yolo_nas_net/drawing/: __init__.py  core.py
app/server/: __init__.py  config.py  core.py  main.py  utils.py
app/st_pages/: capture_video.py  upload_image.py  welcome.py
app/web/: __init__.py  core.py  utils.py
app/web/pages/: __init__.py  capture_video.py  upload_files.py  upload_image.py  upload_video.py  welcome.py
app/web/utils/: __init__.py  predict.py  tables.py
fastdup/: clean_folder.py
notebooks/: DeleteNonUnique.ipynb  clean_data.ipynb  generate_yolov_dataset.ipynb  predict_generation.ipynb  prepare_dataset.ipynb  test_roboflow.ipynb  test_yolo_nas.ipynb  visualization.ipynb
prepare_data/: labels.py  statistics.py  utils.py  visualize.py
server/: main.py
submission/: nas_model.py
submits/: submit_best_m1.csv  submit_best_s1.csv
web/: main.py  utils.py
web/st_pages/: __init__.py  capture_video.py  upload_image.py  welcome.py
yolov-nas-train/: docker-compose.yaml  trainer.py
