[tool.poetry]
name = "atomichack"
version = "0.1.0"
description = ""
authors = ["team 4U (werserk, blogerlu)"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^7.0.0"
tqdm = "^4.66.4"


[tool.poetry.group.web.dependencies]
opencv-python = "^4.10.0.82"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
