[tool.poetry]
name = "atomichack"
version = "0.1.0"
description = ""
authors = ["team 4U (werserk, blogerlu)"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<=3.12"
roboflow = "^1.1.32"
supervision = "^0.21.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^7.0.0"
tqdm = "^4.66.4"


[tool.poetry.group.web.dependencies]
opencv-python = "^4.10.0.82"
streamlit = "^1.35.0"
streamlit-webrtc = "^0.47.7"


[tool.poetry.group.backend.dependencies]
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
