[tool.poetry]
name = "atomhack-submit"
version = "0.1.0"
description = ""
authors = ["blogerlu <a.v.vlasov2003@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<=3.12.3"
pandas = "^2.2.2"
imageio = "^2.34.2"
supervision = "^0.21.0"
roboflow = "^1.1.34"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"
twilio = "^9.2.3"
fastapi = "^0.111.0"
streamlit = "^1.36.0"
streamlit-webrtc = "^0.47.7"
opencv-python = "^4.10.0.84"
imagehash = "^4.3.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
